<resources>
    <!--  <string name="app_name">Apna Bazar</string>-->
    <string name="header_sign_in">Sign In</string>
    <string name="txt_user_name">USERNAME</string>
    <string name="txt_login">Login</string>
    <string name="txt_next">Next</string>
    <string name="hint_esjayit">Enter Username</string>
    <string name="txt_get_your_code">GET YOUR CODE</string>
    <string name="txt_otp_subtitle">Please enter the OTP code sent to your Register Mobile Number.</string>
    <string name="btn_verify_and_proceed">Verify and Proceed</string>
    <string name="x">X</string>
    <string name="txt_dont_get_otp">If you don’t receive code!</string>
    <string name="txt_resend">Resend</string>
    <string name="txt_set_new_pwd">SET NEW PASSWORD</string>
    <string name="hearder_new_pwd">Enter New Password</string>
    <string name="txt_new_pwd_desc">Your new password must be different from previously used password.</string>
    <string name="lbl_new_password">New Password</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_pwd">Password</string>
    <string name="txt_forget_pwd">Forget Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_demand_list">Demand List</string>
    <string name="tv_notification_list">Notification</string>
    <string name="tv_ledger">Ledger</string>
    <string name="txt_return_list">5% Return </string>
    <string name="txt_profile">Profile</string>
    <string name="txt_logout">Logout</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_add_demand">Add Demand</string>
    <string name="txt_select_meduim">Select Medium</string>
    <string name="txt_date">Date</string>
    <string name="txt_search">Search</string>
    <string name="txt_select_standard">Select Standard</string>
    <string name="tv_subject_name">Subject Name</string>
    <string name="txt_qty">qty</string>
    <string name="txt_bunch">Bunch</string>
    <string name="tv_standard">STANDARD</string>
    <string name="tv_view_demand">View Demand</string>
    <string name="tv_enter_demand_no">Enter demand no.</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_edit_demand">Edit Demand</string>
    <string name="txt_add_return">Add Return</string>
    <string name="txt_demand_no">Demand No.</string>
    <string name="txt_bill_no">Bill No.</string>
    <string name="txt_buy_qty">Buy Qty</string>
    <string name="txt_max_qty">Max Qty</string>
    <string name="txt_return_qty">Return Qty</string>
    <string name="_5_return_book">5% Return Book</string>
    <string name="_5_return_view">5% Return View</string>
</resources>
