<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>

        <variable
            name="click"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <!-- Top App Bar -->
        <LinearLayout
            android:id="@+id/top_app_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/background"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_back"
                android:onClick="@{click::onClick}"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_6sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/ic_back" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/sub_header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:layout_marginEnd="@dimen/_16sdp"
                android:fontFamily="@font/ralewa_regular"
                android:paddingHorizontal="@dimen/_8sdp"
                android:text="@string/_5_return_book"
                android:textAlignment="center" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/btn_notification"
                android:onClick="@{click::onClick}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="@dimen/_16sdp"
                android:padding="@dimen/_12sdp"
                android:visibility="gone"
                android:src="@drawable/ic_notification" />

        </LinearLayout>

        <!-- Select Medium -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_select_medium"
            style="@style/txt_demand_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/txt_select_meduim"
            app:layout_constraintStart_toStartOf="@id/txt_fld_slct_medim_lyt"
            app:layout_constraintTop_toBottomOf="@id/top_app_bar" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_fld_slct_medim_lyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_12sdp"
            app:boxBackgroundColor="@color/white"
            app:endIconDrawable="@drawable/ic_down"
            app:endIconMode="custom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_select_medium">

            <EditText
                android:id="@+id/et_module"
                style="@style/ans_demand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="false"
                android:onClick="@{click::onClick}"
                android:padding="16dp"
                android:textColor="@color/txt_profile" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Select Standard -->
        <LinearLayout
            android:id="@+id/ll_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_6sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/ll_2"
            app:layout_constraintStart_toStartOf="@id/txt_fld_slct_medim_lyt"
            app:layout_constraintTop_toBottomOf="@id/txt_fld_slct_medim_lyt">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_select_standard"
                style="@style/txt_demand_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_select_standard"
                app:layout_constraintStart_toStartOf="@id/txt_fld_slct_medim_lyt"
                app:layout_constraintTop_toBottomOf="@id/txt_fld_slct_medim_lyt" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_fld_slct_standard_lyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:endIconDrawable="@drawable/ic_down"
                app:endIconMode="custom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_select_standard">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/et_standard"
                    style="@style/ans_demand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="false"
                    android:onClick="@{click::onClick}"
                    android:textColor="@color/txt_profile" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <!-- Date -->
        <LinearLayout
            android:id="@+id/ll_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/txt_fld_slct_medim_lyt"
            app:layout_constraintStart_toEndOf="@id/ll_1"
            app:layout_constraintTop_toBottomOf="@id/txt_fld_slct_medim_lyt">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_date"
                style="@style/txt_demand_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_date"
                app:layout_constraintStart_toStartOf="@+id/txt_fld_slct_date_lyt"
                app:layout_constraintTop_toTopOf="@+id/tv_select_standard" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_fld_slct_date_lyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:onClick="@{click::onClick}"
                app:layout_constraintEnd_toEndOf="@+id/txt_fld_slct_medim_lyt"
                app:layout_constraintTop_toBottomOf="@+id/tv_date">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/et_date"
                    style="@style/ans_demand"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_37sdp"
                    android:clickable="true"
                    android:focusable="false"
                    android:onClick="@{click::onClick}"
                    android:textAllCaps="true"
                    android:textColor="@color/txt_profile" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_add_demand_tbl_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_18sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_2">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30dp"
                android:background="@drawable/square_title"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/tv_ad_subject_name"
                    style="@style/add_demand_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/tv_subject_name" />

                <TextView
                    android:id="@+id/tv_ad_qty"
                    style="@style/add_demand_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_buy_qty"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/tv_ad_bunch"
                    style="@style/add_demand_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:text="@string/txt_max_qty" />

                <TextView
                    android:id="@+id/tv_ad_standard"
                    style="@style/add_demand_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_return_qty"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_add_demand_tbl_data"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/cl_add_demand_tbl_header"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintStart_toStartOf="@id/cl_add_demand_tbl_header"
            app:layout_constraintTop_toBottomOf="@id/cl_add_demand_tbl_header">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/square_data"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_return_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/_4sdp"
                android:orientation="vertical"
                android:translationZ="@dimen/_20sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:itemCount="5"
                tools:listitem="@layout/raw_return" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_no_data"
                android:text="No data found"
                style="@style/label_style"
                android:visibility="gone"
                android:translationZ="@dimen/_20sdp"
                app:layout_constraintEnd_toEndOf="@id/rv_return_list"
                app:layout_constraintTop_toTopOf="@id/rv_return_list"
                app:layout_constraintBottom_toBottomOf="@id/rv_return_list"
                app:layout_constraintStart_toStartOf="@id/rv_return_list"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_return"
            style="@style/btn_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_42sdp"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:backgroundTint="@color/black"
            android:onClick="@{click::onClick}"
            android:text="@string/txt_add_return"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/cl_add_demand_tbl_data"
            app:layout_constraintStart_toStartOf="@id/cl_add_demand_tbl_data"
            app:layout_constraintTop_toBottomOf="@id/cl_add_demand_tbl_data" />


        <!--Recycler View-->
        <!--   <androidx.recyclerview.widget.RecyclerView
               android:layout_width="match_parent"
               android:layout_height="0dp"
               android:layout_margin="@dimen/_12sdp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"

               app:layout_constraintTop_toBottomOf="@+id/ll_search" />
   -->
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
